== 0.20.1 2008-03-30

* extconf generator creates test/test_#{name}_extn.rb test file
* requirements.rb no longer loads main lib file; no idea why it did it before

== 0.20.0 2008-03-30

* extconf generator - for C-extensions
* Hoe instance stored in $hoe so can be accessed from tasks/*.rake

== 0.19.1 2008-03-27

* rspec "rake spec" supports spec/**/*_spec.rb search now [Steven Parkes]

== 0.19.0 2008-03-25

* Added newgem_theme long_box_theme [Daniel Cadenas]

== 0.18.0 2008-03-14

* Upgraded generated/local README.txt for latest hoe

== 0.17.1 2008-02-20

* remove options from 'env ruby' in newgem bin

== 0.17.0 2008-02-03

* Updated generated config/hoe.rb for latest hoe 1.5 requirements
* Added #!/usr/bin/env ruby line to bin/newgem
* Fixed docco for -T option (was '-t' in docco) [uploaded on 2008-1-3]

== 0.16.1 2007-11-13

* Oops, removed .git* from the hoe clean list as that blows away the .git folder...

== 0.16.0 2006-11-11

* Added a newgem_simple_generator to support the creation of a skinny gem
  skeleton [thx wycats]
* Added '.git*' to default list of ignored files by hoe
* Cleaned the history join string to make proper \n instead of \\n
* Checked in empty_log as empty.log was being ignored by svn

== 0.15.0 2007-11-05

* Promoted 'application_generator' and 'component_generator' to Rubigen
from NewGem project (they are available even if newgem not installed)

== 0.14.2 2007-11-03

* Application generator inserts scopes passed in at cmd line, not app name
* Generated gems have default testing scope: test_unit

== 0.14.1 2007-10-18

* Added manifest:refresh rake task to recreate Manifest.txt with all files
* Corrected the generated readme for application generators

== 0.14.0 2007-10-14

* application_generator includes the install_rubigen_scripts generator
* if website included, no "overwrite tasks/website.rake" questions
* Update to docco for rubigen-based output [thx Noah Gibbs]