@@ -1,6 +1,7 @@
 == 0.20.1 2008-03-30
 
 * extconf generator creates test/test_#{name}_extn.rb test file
+* extconf generator creates .autotest file for *.c -> test/test_*_extn.rb
 * requirements.rb no longer loads main lib file; no idea why it did it before
 
 == 0.20.0 2008-03-30
